# encryptor

./: Cargo.toml  README.md  encryptor  file.enc  file.enc.aes  file.txt
src/: main.rs
