[package]
name = "encryptor"
version = "0.1.0"
authors = ["Oğuz Kurt <kurt.oguz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2rs = "0.2.5"
blake3 = "0.3.5"
clap = "2.33.1"
chacha20poly1305 = "0.5.1"
aes-gcm-siv = "0.5.0"
getrandom = "0.1.14"